# LearningEngine

./: .clang-format  .clang-tidy  .gitignore  .sparkle  BuildAll.bat  BuildProjects.bat  BuildSampleApps.bat  BuildSamples.bat  BuildSamplesDebug.bat  BuildSamplesRelWithDebInfo.bat  BuildSamplesRelease.bat  BuildSolution.bat  CODING_STYLE.md  CheckDependencies.bat  CleanIntermediateFiles.bat  CleanSolution.bat  CmakeLists.txt  LOGGING_STYLE.md  LearningEngine.vcxproj  LearningEngine.vcxproj.filters  README.md  RegenerateSolution.bat  RunClangFormat.bat
Engine/: .sparkle-engine  CMakeLists.txt
Engine/AI/Public/: AIAPI.h
Engine/Animation/Public/: AnimationAPI.h
Engine/Application/: CMakeLists.txt
Engine/Application/Private/: App.cpp  PCH.h
Engine/Application/Public/: App.h  ApplicationAPI.h
Engine/Assets/Meshes/Cube/: Cube.gltf
Engine/Assets/Shaders/: Common.hlsli  CommonPS.hlsli
Engine/Assets/Shaders/BRDF/: BRDF.hlsli  Config.hlsli  Distribution.hlsli  Fresnel.hlsli  Geometry.hlsli  ShadingData.hlsli  Specular.hlsli
Engine/Assets/Shaders/Common/: Constants.hlsli  Math.hlsli
Engine/Assets/Shaders/Geometry/: PixelInput.hlsli  PixelOutput.hlsli  VertexInput.hlsli  VertexOutput.hlsli
Engine/Assets/Shaders/Lighting/: LightEvaluation.hlsli
Engine/Assets/Shaders/Resources/: ConstantBuffers.hlsli  Samplers.hlsli
Engine/Audio/Public/: AudioAPI.h
Engine/Core/: CMakeLists.txt
Engine/Core/Private/: FileSystemUtils.cpp  PCH.h
Engine/Core/Private/Diagnostics/: Log.cpp
Engine/Core/Public/: CoreAPI.h  CoreMinimal.h  CoreTypes.h
Engine/Core/Public/Math/: Frustum.h
Engine/Editor/Public/: EditorAPI.h
Engine/GameFramework/: CMakeLists.txt
Engine/GameFramework/Private/: PCH.h
Engine/GameFramework/Public/: GameFrameworkAPI.h
Engine/Include/: EngineConfig.h
Engine/Networking/Public/: NetworkingAPI.h
Engine/Physics/Public/: PhysicsAPI.h
Engine/Platform/: CMakeLists.txt
Engine/Platform/Private/: PCH.h  Window.cpp
Engine/Platform/Public/: PlatformAPI.h  PlatformConfig.h  Window.h
Engine/RHI/: CMakeLists.txt
Engine/RHI/Private/: PCH.h
Engine/RHI/Public/: RHIAPI.h  RHIConfig.h
Engine/Renderer/: CMakeLists.txt
Engine/Renderer/Private/: DepthConvention.cpp  GPUMesh.cpp  GPUMeshCache.cpp  PCH.h  RenderCamera.cpp  RenderContext.cpp  Renderer.cpp  TextureManager.cpp
Engine/Renderer/Public/: DepthConvention.h  DirectionalLight.h  GPUMesh.h  GPUMeshCache.h  RenderCamera.h  RenderContext.h  Renderer.h  RendererAPI.h  SceneView.h  TextureManager.h
Engine/Scripting/Public/: ScriptingAPI.h
Engine/Src/Application/: App.cpp
Engine/Src/Assets/: AssetId.h  AssetSystem.h  AssetTypes.h
Engine/Src/Core/: PCH.h
Engine/Src/Platform/: Window.h
Engine/Src/Renderer/: DepthConvention.cpp  Renderer.cpp  TextureManager.cpp
Engine/Src/Scene/: Scene.cpp
Engine/Src/UI/: UI.cpp  UI.h
Engine/UI/: CMakeLists.txt
Engine/UI/Private/: PCH.h  UI.cpp
Engine/UI/Public/: UI.h  UIAPI.h  UIConfig.h
Projects/HelloWorld/: CMakeLists.txt  imgui.ini
Projects/HelloWorld/Src/: main.cpp
Projects/SampleScenes/: CMakeLists.txt
Projects/SampleScenes/Src/: main.cpp
Projects/TemplateProject/: CMakeLists.txt
engine/: CMakeLists.txt
engine/assets/shaders/: Animation.hlsli  Common.hlsli  CommonPS.hlsli  CommonVS.hlsli  ConstantBufferData.hlsli  LayoutPixel.hlsli  LayoutVertex.hlsli  Lighting.hlsli  Material.hlsli  SimplePS.hlsl  SimpleVS.hlsl  Transform.hlsli  Utilities.hlsli  Viewmode.hlsli
engine/docs/: InputSystem.txt  InputSystemIntegration.txt
engine/include/: App.h  EngineConfig.h  Error.h  Log.h  PCH.h
engine/include/Core/: PCH.h  Renderer.h  UI.h  Window.h
engine/include/DX12/: Camera.h  DescriptorHeapManager.h  Error.h  RHI.h  Sampler.h  ShaderCompiler.h  Texture.h  TextureLoader.h
engine/pch/: PCH.h
engine/src/: App.cpp  AssetPathResolver.h  Camera.cpp  Camera.h  ConstantBuffer.h  ConstantBufferManager.cpp  ConstantBufferManager.h  DebugLayer.cpp  DebugUtils.h  DepthStencil.cpp  DepthStencil.h  DescriptorAllocator.cpp  DescriptorHandle.cpp  DescriptorHandle.h  DescriptorHeap.cpp  DescriptorHeap.h  DescriptorHeapManager.cpp  Error.cpp  FrameResource.h  Log.cpp  PCH.h  PSO.cpp  PSO.h  Primitive.cpp  Primitive.h  PrimitiveFactory.cpp  PrimitiveFactory.h  PrimitivePlane.cpp  RHI.cpp  RHI.h  Renderer.cpp  Renderer.h  RootBindings.h  RootSignature.cpp  RootSignature.h  Sampler.cpp  Sampler.h  ShaderCompiler.cpp  ShaderCompiler.h  SwapChain.cpp  (+11 more)
engine/src/Assets/: AssetId.h  AssetSource.h  AssetSystem.cpp  AssetSystem.h  AssetTypes.h
engine/src/Core/: DebugUtils.h  FileSystemUtils.cpp  FileSystemUtils.h  LinearAllocator.cpp  LinearAllocator.h  Log.cpp  MathUtils.h  PCH.cpp  PCH.h  Renderer.cpp  Timer.cpp  Timer.h  UI.cpp  Window.cpp
engine/src/D3D12/: AssetPathResolver.h  Camera.cpp  Camera.h  ConstantBuffer.h  ConstantBufferManager.cpp  ConstantBufferManager.h  DebugLayer.cpp  DebugLayer.h  DebugUtils.h  DepthStencil.cpp  DepthStencil.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorHandle.cpp  DescriptorHandle.h  DescriptorHeap.cpp  DescriptorHeap.h  DescriptorHeapManager.cpp  DescriptorHeapManager.h  Geometry.cpp  Geometry.h  PSO.cpp  PSO.h  Primitive.cpp  Primitive.h  PrimitiveBox.cpp  PrimitiveBox.h  PrimitiveFactory.cpp  PrimitiveFactory.h  PrimitivePlane.cpp  PrimitivePlane.h  RHI.cpp  RHI.h  Renderer.cpp  Renderer.h  RootSignature.cpp  RootSignature.h  Sampler.cpp  Sampler.h  ShaderCompiler.cpp  (+13 more)
engine/src/Platform/: Window.cpp  Window.h
engine/src/Renderer/: Camera.cpp  Camera.h  DepthConvention.cpp  DepthConvention.h  RenderCamera.cpp  RenderCamera.h  Renderer.cpp  Renderer.h  TextureManager.h
engine/src/Resources/: AssetPathResolver.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
engine/src/Scene/: Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Primitive.cpp  Primitive.h  PrimitiveBox.cpp  PrimitiveBox.h  PrimitiveFactory.cpp  PrimitiveFactory.h  PrimitivePlane.cpp  PrimitivePlane.h  Scene.cpp  Scene.h
engine/src/UI/: UI.cpp  UI.h
projects/Sponza/: CMakeLists.txt
projects/Sponza/src/: main.cpp
(+479 files in other folders)
